--- a/index.html
+++ b/index.html
@@ -46,10 +46,9 @@
           <div style="margin-top: 10px">
             7 billion smiles and only yours pours life in me
           </div>
-          <div style="margin-top: 10px">I love you🤍</div>
+          <div style="margin-top: 10px">I love you so so much🤍</div>
           <div style="margin-top: 10px">
-            Dont's worry baby, for as long as I exist, you will always be
-            loved💗
+            Don't worry baby, for as long as I exist, you will always be loved💗
           </div>
           <div style="margin-top: 10px">
             Even though I'm not with you, I love you so so much and I'm so
